improve height and overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,10 @@ body {
 
 .page {
   position: absolute;
-  height: calc(100% - 100px);
+  height: 100%;
   overflow-y: scroll;
+  top: 0;
+  padding-top: 120px;
   left: 0;
   right: 0;
   transition: all 0.5s ease-in-out;
